--- a/manifest.yaml
+++ b/manifest.yaml
@@ -9,13 +9,19 @@ release-notes: Initial release.
 ports:
   - internal: 443
     tor: 443
+    lan:
+      custom:
+        port: 443
   - internal: 8448
     tor: 8448
+    lan:
+      custom:
+        port: 8448
 image:
   type: tar
 mount: /root
 has-instructions: true
-os-version-required: ">=0.2.8"
+os-version-required: ">=0.2.11"
 os-version-recommended: ">=0.2.11"
 assets: []
 hidden-service-version: v3
