--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "conduit"]
 	path = conduit
 	url = https://gitlab.com/dr-bonez/conduit
+[submodule "element-web"]
+	path = element-web
+	url = https://github.com/vector-im/element-web.git
